--- a/style.css
+++ b/style.css
@@ -516,7 +516,7 @@ h6 {
 }
 
 .image {
-      background: url(https://www.pexels.com/photo/silhouette-of-human-with-sunset-background-804172/) no-repeat 50% 70%;
+      background: url(https://images.unsplash.com/photo-1500239524810-5a6e76344a17?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1204&q=80) no-repeat 50% 70%;
 }
 
 /*--------------- contact form --------------- */
